[package]
name = "rustchain"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
rand = "0.8.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
sled = "0.34.7"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal", "net", "io-util", "sync", "time"] }
toml = "0.8.23"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "std"] }

[dev-dependencies]
proptest = "1.9.0"
tempfile = "3.23.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
dbg_macro = "deny"
todo = "deny"
