[package]
name = "rustchain"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.6"
clap = { version = "4.5.53", features = ["derive"] }
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
rand = "0.8.5"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
sled = "0.34.7"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal", "net", "io-util", "sync", "time"] }
toml = "0.8.23"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "std"] }

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
proptest = "1.9.0"
tempfile = "3.23.0"
tower = { version = "0.5.2", features = ["util"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
dbg_macro = "deny"
todo = "deny"
